Final update including FAQ changes

--- a/en/faqs.html
+++ b/en/faqs.html
@@ -167,45 +167,6 @@
                 </div>
                 <div class="accordion-item mb-1 border-0">
                   <h2 class="accordion-header">
-                    <button class="rounded-4 accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapse2" aria-expanded="false" aria-controls="flush-collapse2">
-                      <span class="text-white fs-4">How to manage hyperhidrosis?</span>
-                    </button>
-                  </h2>
-                  <div id="flush-collapse2" class="accordion-collapse collapse" data-bs-parent="#accordionFlushFaqs">
-                    <div class="accordion-body">
-                      <p>Many of us are dealing with excessive sweating (hyperhidrosis) on a daily basis, without knowing the result.<br>Hyperhidrosis can sometimes lead to physical discomfort, anxiety, embarrassment, and stress.<sup>2</sup></p>
-                    </div>
-                  </div>
-                </div>
-                <div class="accordion-item mb-1 border-0">
-                  <h2 class="accordion-header">
-                    <button class="rounded-4 accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapse3" aria-expanded="false" aria-controls="flush-collapse3">
-                      <span class="text-white fs-4">Is Botulinum toxin effective in treating hyperhidrosis?</span>
-                    </button>
-                  </h2>
-                  <div id="flush-collapse3" class="accordion-collapse collapse" data-bs-parent="#accordionFlushFaqs">
-                    <div class="accordion-body">
-                      <p>If you're suffering form excessive sweating "hyperhidrosis", we understand you may have tried everything you can to avoid stains.<sup>2</sup></p>
-                      <p>Hyperhidrosis can be treated with a variety of different treatment options.<br>Talk to your medical provider TODAY.</p>
-                      <p>Patients' responses to treatments may vary from a patient to another. Always discuss with your doctor the suitable treatment options for your condition.</p>
-                    </div>
-                  </div>
-                </div>
-                <div class="accordion-item mb-1 border-0">
-                  <h2 class="accordion-header">
-                    <button class="rounded-4 accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapse4" aria-expanded="false" aria-controls="flush-collapse4">
-                      <span class="text-white fs-4">How many people suffer from excessive underarm sweating?</span>
-                    </button>
-                  </h2>
-                  <div id="flush-collapse4" class="accordion-collapse collapse" data-bs-parent="#accordionFlushFaqs">
-                    <div class="accordion-body">
-                      <p>Research shows that nearly 5% of the world's population suffers from excessive sweating or hyperhidrosis. 365 MILLION people around the world are struggling with extreme sweating.<br>And 65% of them report having axillary
-                        hyperhidrosis.<sup>3</sup></p>
-                    </div>
-                  </div>
-                </div>
-                <div class="accordion-item mb-1 border-0">
-                  <h2 class="accordion-header">
                     <button class="rounded-4 accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapse5" aria-expanded="false" aria-controls="flush-collapse5">
                       <span class="text-white fs-4">Is hyperhidrosis a real struggle?</span>
                     </button>
@@ -251,9 +212,7 @@
                   </h2>
                   <div id="flush-collapse8" class="accordion-collapse collapse" data-bs-parent="#accordionFlushFaqs">
                     <div class="accordion-body">
-                      <p>Botulinum toxin type "A" could improve the quality of life in patients with axillary hyperhidrosis with a 7-month average duration of effect.<sup>4</sup></p>
-                      <p>Have you talked to your medical provider about excessive sweating treatment options?</p>
-                      <p>Patients' responses to treatments may vary from a patient to another. Always discuss with your doctor the suitable treatment options for your condition.</p>
+                      <p>Botulinum Toxin Type A treatment effectively reduces the symptoms of primary axillary hyperhidrosis and significantly reduce daily activity limitations. Treatment efficacy is sustained, with a median duration of 7 months. Botulinum Toxin Type A treatment is well tolerated.<sup>4</sup></p>
                     </div>
                   </div>
                 </div>
@@ -288,8 +247,8 @@
                   </h2>
                   <div id="flush-collapse10" class="accordion-collapse collapse" data-bs-parent="#accordionFlushFaqs">
                     <div class="accordion-body">
-                      <p>The main symptom of hyperhidrosis is heavy and visible sweating. This goes beyond sweating from being in a hot environment, exercising, or feeling anxious or stressed. The hyperhidrosis that usually affects underarms, or
-                        other parts causes at least one episode a week when you're awake. And the sweating usually happens on both sides of the body.<sup>6</sup></p>
+                      <p>The main symptom of hyperhidrosis is heavy and visible sweating. This goes beyond sweating from being in a hot environment, exercising, or feeling anxious or stressed. The hyperhidrosis that usually affects underarms, or other parts causes at least one episode a week when you're awake. And the sweating usually happens on both sides of the body.<sup>6</sup></p>
+                      <p>However, excessive sweating can present in different ways too, according to the causes.</p>
                       <p>Always discuss with your doctor the suitable treatment options for your condition.</p>
                     </div>
                   </div>
@@ -376,7 +335,7 @@
                       <li>Sweating: MedlinePlus Medical Encyclopedia. Available from: <a class="text-dark" href="https://medlineplus.gov/ency/article/003218.htm" target="_blank">https://medlineplus.gov/ency/article/003218.htm</a></li>
                       <li>American Society for Dermatologic Surgery, Inc.- Dermatol Surg 2007;33:908–932</li>
                       <li>Doolittle J et al. Arch Dermatol Res 2016;308:743−749.H43:H46</li>
-                      <li>Focal hyperhidrosis: diagnosis and  management, Aamir Haider CMAJ 2005;172(1):69-81</li>
+                      <li>Lowe et al, J Am Acad Dermatol 2007;56604-11</li>
                       <li>Hornberger J et al. J Am Acad Dermatol 2004;51:274−286</li>
                       <li><a class="text-dark" href="https://www.aad.org/public/diseases/a-z/hyperhidrosis-symptoms" target="_blank">https://www.aad.org/public/diseases/a-z/hyperhidrosis-symptoms</a> last accessed (Feb 2023)</li>
                       <li><a class="text-dark" href="https://www.nhsinform.scot/illnesses-and-conditions/skin-hair-and-nails/hyperhidrosis#complications-of-hyperhidrosis" target="_blank">https://www.nhsinform.scot/illnesses-and-conditions/skin-hair-and-nails/hyperhidrosis#complications-of-hyperhidrosis</a> last accessed (Feb 2023)</li>
