--- a/ar/faqs.html
+++ b/ar/faqs.html
@@ -28,13 +28,38 @@
   </header>
   <nav id="mainNavbar" class="topbar menu-bg-level-2 py-3">
     <div class="container-fluid position-relative">
-      <div class="row d-flex justify-content-center align-items-center">
-        <div class="col-3 col-lg-2">
-          <a class="navbar-brand" href="ar">
-            <img src="assets/img/logo/logo.svg" alt="BEAT THE SWEAT">
-          </a>
+      <div class="row d-flex justify-content-between align-items-center">
+
+        <div class="col-3 d-lg-none">
+          <div class="menu-icon">
+
+          </div>
         </div>
-        <div class="col-4 col-lg-8 col-xxl-6 offset-xxl-2 mx-lg-auto">
+
+        <div class="d-none d-lg-flex align-items-end justify-content-end justify-content-lg-start col-2 col-lg-3 col-xxl-2">
+
+          <ul class="list-unstyled d-flex social-navbar mb-0">
+            <li class="mx-1"><a href="https://www.facebook.com/BTS.MEA" target="_blank"><img src="assets/img/social/fb.svg" alt="Facebook"></a></li>
+            <li class="mx-1"><a href="https://www.instagram.com/beatthesweat.mea/" target="_blank"><img src="assets/img/social/instagram.svg" alt="Instagram"></a></li>
+            <li class="mx-1"><a href="https://www.tiktok.com/@beatthesweat.mea" target="_blank"><img src="assets/img/social/tiktok.svg" alt="Tiktok"></a></li>
+            <li class="mx-1"><a href="https://www.youtube.com/@Beatthesweat-MEA" target="_blank"><img src="assets/img/social/youtube.svg" alt="Youtube"></a></li>
+            <li class="mx-1"><a href="https://www.snapchat.com/add/beatthesweatmea" target="_blank"><img src="assets/img/social/snapchat.svg" alt="Snapchat"></a></li>
+          </ul>
+
+          <div class="language-switcher ps-3">
+            <div class="d-flex align-items-center justify-content-center">
+              <div class="">
+                <img src="assets/img/icon/web.svg" alt="Language Icon">
+              </div>
+              <a class="ms-1 h6 text-decoration-none fw-bold font-en fs-7 mb-0" href="en/faqs">EN</a>
+              <span class="d-inline-block lang-divider"></span>
+              <a class="h6 text-decoration-none fw-bold fs-7 font-en mb-0 text-secondary">AR</a>
+            </div>
+          </div>
+
+        </div>
+
+        <div class="col-4 col-lg-7 col-xxl-6 offset-xxl-2 mx-lg-auto">
           <div class="main-menu">
             <ul class="nav flex-column flex-lg-row position-relative justify-content-start justify-content-xxl-around align-items-start align-items-lg-center py-2">
               <li class="nav-item mb-2 mb-lg-0 position-relative d-lg-none">
@@ -88,33 +113,13 @@
             </div>
           </div>
         </div>
-        <div class="d-none d-lg-flex align-items-end justify-content-end col-2">
 
-          <ul class="list-unstyled d-flex social-navbar mb-0">
-            <li class="mx-1"><a href="https://www.facebook.com/BTS.MEA" target="_blank"><img src="assets/img/social/fb.svg" alt="Facebook"></a></li>
-            <li class="mx-1"><a href="https://www.instagram.com/beatthesweat.mea/" target="_blank"><img src="assets/img/social/instagram.svg" alt="Instagram"></a></li>
-            <li class="mx-1"><a href="https://www.tiktok.com/@beatthesweat.mea" target="_blank"><img src="assets/img/social/tiktok.svg" alt="Tiktok"></a></li>
-            <li class="mx-1"><a href="https://www.youtube.com/@Beatthesweat-MEA" target="_blank"><img src="assets/img/social/youtube.svg" alt="Youtube"></a></li>
-            <li class="mx-1"><a href="https://www.snapchat.com/add/beatthesweatmea" target="_blank"><img src="assets/img/social/snapchat.svg" alt="Snapchat"></a></li>
-          </ul>
-
-          <div class="language-switcher ps-3">
-            <div class="d-flex align-items-center justify-content-center">
-              <div class="">
-                <img src="assets/img/icon/web.svg" alt="Language Icon">
-              </div>
-              <a class="ms-1 h6 text-decoration-none fw-bold font-en fs-7 mb-0" href="en/faqs">EN</a>
-              <span class="d-inline-block lang-divider"></span>
-              <a class="h6 text-decoration-none fw-bold fs-7 font-en mb-0 text-secondary">AR</a>
-            </div>
-          </div>
-
+        <div class="col-5 col-lg-2 text-end">
+          <a class="navbar-brand" href="ar">
+            <img src="assets/img/logo/logo.svg" alt="BEAT THE SWEAT">
+          </a>
         </div>
-        <div class="col-4 d-lg-none">
-          <div class="menu-icon">
 
-          </div>
-        </div>
       </div>
     </div>
     <span class="sidebar-overlay"></span>
@@ -162,47 +167,6 @@
                       <p>نتعرّق أكثر عندما يكون الجو حاراً ، عندما نمارس الرياضة، وعندما نشعر بالتوتر أو القلق.<br>
                         لكن بعض الناس يتعرّقون أكثر من المتوسط وهذا يُعرف باسم فرط التعرّق.<sup>1</sup></p>
                       <p>ناقش دائمًا مع طبيبك خيارات العلاج المناسبة لحالتك.</p>
-                    </div>
-                  </div>
-                </div>
-                <div class="accordion-item mb-1 border-0">
-                  <h2 class="accordion-header">
-                    <button class="rounded-4 accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapse2" aria-expanded="false" aria-controls="flush-collapse2">
-                      <span class="text-white fs-4">كيف نتعامل مع فرط التعرّق؟</span>
-                    </button>
-                  </h2>
-                  <div id="flush-collapse2" class="accordion-collapse collapse" data-bs-parent="#accordionFlushFaqs">
-                    <div class="accordion-body">
-                      <p>يعاني الكثير منا من التعرّق المفرط (فرط التعرق) بشكل يومي دون معرفة كيف يؤثر ذلك على حياتنا.
-                        يمكن أن يؤدي فرط التعرّق في بعض الأحيان إلى عدم الراحة الجسدية، القلق، الإحراج والتوتر.<sup>2</sup></p>
-                    </div>
-                  </div>
-                </div>
-                <div class="accordion-item mb-1 border-0">
-                  <h2 class="accordion-header">
-                    <button class="rounded-4 accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapse3" aria-expanded="false" aria-controls="flush-collapse3">
-                      <span class="text-white fs-4">هل توكسين البوتولينوم فعال في علاج فرط التعرّق؟</span>
-                    </button>
-                  </h2>
-                  <div id="flush-collapse3" class="accordion-collapse collapse" data-bs-parent="#accordionFlushFaqs">
-                    <div class="accordion-body">
-                      <p>إذا كنت تعاني من فرط التعرّق، فإننا نتفهم أنك ربما جربت كل ما فى وسعك لتجنب البقع.<sup>2</sup></p>
-                      <p>يوجد خيارات مختلفة لعلاج فرط التعرّق.
-                        تحدث إلى مقدم الرعاية الطبية الخاص بك اليوم.</p>
-                      <p>قد تختلف استجابات المرضى للعلاجات من مريض لآخر. ناقش دائمًا مع طبيبك خيارات العلاج المناسبة لحالتك.</p>
-                    </div>
-                  </div>
-                </div>
-                <div class="accordion-item mb-1 border-0">
-                  <h2 class="accordion-header">
-                    <button class="rounded-4 accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapse4" aria-expanded="false" aria-controls="flush-collapse4">
-                      <span class="text-white fs-4">كم عدد الذين يعانون من فرط التعرّق؟</span>
-                    </button>
-                  </h2>
-                  <div id="flush-collapse4" class="accordion-collapse collapse" data-bs-parent="#accordionFlushFaqs">
-                    <div class="accordion-body">
-                      <p>تظهر الأبحاث أن ما يقرب من 5٪ من سكان العالم يعانون من التعرق المفرط أو فرط التعرق. يعاني 365 مليون شخص حول العالم من التعرق الشديد.
-                        و 65٪ منهم يعانون من فرط التعرق الإبطي.<sup>3</sup></p>
                     </div>
                   </div>
                 </div>
@@ -374,7 +338,7 @@
                           <li>Sweating: MedlinePlus Medical Encyclopedia. Available from: <a class="text-dark" href="https://medlineplus.gov/ency/article/003218.htm" target="_blank">https://medlineplus.gov/ency/article/003218.htm</a></li>
                           <li>American Society for Dermatologic Surgery, Inc.- Dermatol Surg 2007;33:908–932</li>
                           <li>Doolittle J et al. Arch Dermatol Res 2016;308:743−749.H43:H46</li>
-                          <li>Focal hyperhidrosis: diagnosis and management, Aamir Haider CMAJ 2005;172(1):69-81</li>
+                          <li>Lowe et al, J Am Acad Dermatol 2007;56604-11</li>
                           <li>Hornberger J et al. J Am Acad Dermatol 2004;51:274−286</li>
                           <li><a class="text-dark" href="https://www.aad.org/public/diseases/a-z/hyperhidrosis-symptoms" target="_blank">https://www.aad.org/public/diseases/a-z/hyperhidrosis-symptoms</a> last accessed (Feb 2023)</li>
                           <li><a class="text-dark" href="https://www.nhsinform.scot/illnesses-and-conditions/skin-hair-and-nails/hyperhidrosis#complications-of-hyperhidrosis"
