Download page text alignment for arabic version

--- a/ar/download-brochure.html
+++ b/ar/download-brochure.html
@@ -131,7 +131,7 @@
       <div class="container-fluid container-xl">
         <div class="row d-flex align-items-center">
           <div class="col-xl-8 pb-4 pb-xl-0 text-center">
-            <p class="pb-2">"تغلب على العرق" هي حملة توعية تهدف إلى زيادة الوعي حول مرض فرط التعرّق الإبطي ودعم المرضى الذين يعانون منه.<br>برعاية Allergan Aesthetics إحدى شركات AbbVie</p>
+            <p class="pb-2 text-start">"تغلب على العرق" هي حملة توعية تهدف إلى زيادة الوعي حول مرض فرط التعرّق الإبطي ودعم المرضى الذين يعانون منه.<br>برعاية Allergan Aesthetics إحدى شركات AbbVie</p>
             <div class="video-block position-relative">
               <video preload="metadata" class="w-100" id="teaser_video" playsinline autoplay muted loop>
                 <source src="assets/video/bts-ar.mp4" type="video/mp4">
